--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -3,7 +3,9 @@
     <% if (post.link || post.title){ %>
       <header class="article-header">
         <%- partial('post/title', {class_name: 'article-title'}) %>
-        <%- partial('post/date', {class_name: 'archive-article-date', date_format: null}) %>
+        <% if (!post.closeDate){ %>
+          <%- partial('post/date', {class_name: 'archive-article-date', date_format: null}) %>
+        <% } %>
       </header>
     <% } %>
     <div class="article-entry" itemprop="articleBody">
