use cdn and increased a few articles

--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -13,7 +13,7 @@
 </script>
 
 <%- partial('script') %>
-
+<%- js('/assets/js/returnToTop.js') %>
 <% if (theme.mathjax){ %>
 <%- partial('mathjax') %>
 <% } %>
