--- a/themes/yilia/source-src/css/tags.scss
+++ b/themes/yilia/source-src/css/tags.scss
@@ -98,6 +98,10 @@
         margin-top: 6px;
     }
 }
+/* 将首页的tag移动到右边*/
+.article-index .article-tag{
+    float: right;
+}
 .article-category{
     float: left;
     .icon {
