--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -4,12 +4,12 @@
     	<div class="footer-left">
     		&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
         <% if (config.websiteRecordsNum && config.websiteRecordsUrl){ %>
-          <a target="_blank" href="<%- url_for(config.websiteRecordsUrl) %>"><%- config.websiteRecordsNum %></a>
+          <a style="color: inherit;text-decoration: none" target="_blank" href="<%- url_for(config.websiteRecordsUrl) %>"><%- config.websiteRecordsNum %></a>
         <% } %>
     	</div>
-      	<div class="footer-right">
-      		Powered By <a href="http://hexo.io/" target="_blank">Hexo</a>
-      	</div>
+        <div class="footer-right">
+          <a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten
+        </div>
     </div>
   </div>
 </footer>
