--- a/themes/yilia/layout/_partial/left-col.ejs
+++ b/themes/yilia/layout/_partial/left-col.ejs
@@ -2,7 +2,13 @@
 <div class="intrude-less">
 	<header id="header" class="inner">
 		<a href="/" class="profilepic">
-			<img src="<%=theme.avatar%>" class="js-avatar">
+			<% if (theme.avatar){ %>
+				<% if (config.imgurl){ %>
+					<img src="<%- config.imgurl %><%=theme.avatar%>" class="js-avatar">
+			    <% } else{ %>
+					<img src="<%=theme.avatar%>" class="js-avatar">
+			    <% } %>
+		    <% } %>
 		</a>
 		<hgroup>
 		  <h1 class="header-author"><a href="/"><%=theme.author%></a></h1>
