--- a/themes/yilia/layout/_partial/post/date.ejs
+++ b/themes/yilia/layout/_partial/post/date.ejs
@@ -1,3 +1,9 @@
-<a href="<%- url_for(post.path) %>" class="<%= class_name %>">
+<a href="
+	<% if (index) { %>
+		<%- url_for(post.path) %>
+	<% } else { %>
+		javascript:;
+	<% } %>
+" class="<%= class_name %>">
   	<time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><i class="icon-calendar icon"></i><%= date(post.date, date_format) %></time>
 </a>
