--- a/themes/yilia/layout/layout.ejs
+++ b/themes/yilia/layout/layout.ejs
@@ -17,6 +17,7 @@
           </div>
         </div>
       </div>
+      <%- partial('_partial/to-top') %>
       <%- partial('_partial/footer') %>
     </div>
     <%- partial('_partial/after-footer') %>
