--- a/themes/yilia/source-src/css/article-inner.scss
+++ b/themes/yilia/source-src/css/article-inner.scss
@@ -1,10 +1,4 @@
 .article-inner {
-	p {
-	    margin: 0 0 1.75em;
-	}
-}
-
-.article-inner {
 	border-color: #d1d1d1;
 }
 
@@ -12,24 +6,18 @@
 	font-size: 28px;
 	font-size: 1.75rem;
 	line-height: 1.25;
-	margin-top: 2em;
-	margin-bottom: 1em;
 }
 
 .article-inner h2 {
 	font-size: 23px;
 	font-size: 1.4375rem;
 	line-height: 1.2173913043;
-	margin-top: 2.4347826087em;
-	margin-bottom: 1.2173913043em;
 }
 
 .article-inner h3 {
 	font-size: 19px;
 	font-size: 1.1875rem;
 	line-height: 1.1052631579;
-	margin-top: 2.9473684211em;
-	margin-bottom: 1.4736842105em;
 }
 
 .article-inner h4,
@@ -38,8 +26,6 @@
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.3125;
-	margin-top: 3.5em;
-	margin-bottom: 1.75em;
 }
 
 .article-inner h4 {
@@ -78,7 +64,7 @@
   padding-right: 7.6923%;
   padding-left: 7.6923%;
   p{
-    margin-top: 10px;
+    margin: 10px 0;
   }
   p code,li code{
     padding: 1px 3px;
@@ -148,6 +134,9 @@
     padding-bottom: 5px;
     border-bottom: 1px solid #ddd;
   }
+  h1,h2,h3,h4,h5,h6{
+    margin-bottom: 15px;
+  }
   video{
     max-width: 100%;
   }
@@ -161,8 +150,8 @@
   }
   hr{
     height: 0;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border-left: 0;
     border-right: 0;
     border-top: 1px solid #DDD;
