--- a/themes/yilia/layout/_partial/to-top.ejs
+++ b/themes/yilia/layout/_partial/to-top.ejs
@@ -1,1 +1,2 @@
-<a href="javascript:;" id="return-to-top" title="点我起飞" style="display: none"></a>
+<a href="javascript:;" id="return-to-top" title="点我起飞"></a>
+<a href="javascript:;" id="return-to-top-mobile" title="点我起飞"></a>
